feat: implementar camadas de service, resource e tratamento de exceções